--- a/themes/Pink.css
+++ b/themes/Pink.css
@@ -32,6 +32,6 @@
     color: #290000;
 }
 
-button.custom:active, button.custom:hover {
+button.Options-button:active, button.Options-button:hover {
     background-color: #fff5f5 !important;
 }
