--- a/themes/White.css
+++ b/themes/White.css
@@ -30,6 +30,6 @@
     background-image: url('White-button-menu.png');
 }
 
-button.custom:active, button.custom:hover {
+button.Options-button:active, button.Options-button:hover {
     background-color: #f5f5f5 !important;
 }
