--- a/window.css
+++ b/window.css
@@ -307,30 +307,48 @@ input[special], .search-past-item.special {
 }*/
 
 #window-list {
+    -webkit-box-sizing: border-box;
+
+    display: -webkit-box;
+    -webkit-box-pack: center;
+
     position: absolute;
+
+    width: 100%;
+    height: 100%;
     padding: 69px 15px 41px;
 }
 .window {
-    width: 400px;
+    /*width: 400px;*/
+    -webkit-box-flex: 1;
+
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+
+    /*position: relative;
+    z-index: 2;*/
+
+    min-width: 105px;
     height: 100%;
     padding-right: 15px;
-    outline-width: 0px;
+    outline: none;
 }
-.window[data-selected] > .window-div {
+/*.window[data-selected] > .window-div {*/
+.window[data-selected] {
     position: relative;
     z-index: 2;
 }
 .window[data-last] {
     padding-right: 0px;
 }
-.window[data-last] > .window-div {
+/*.window[data-last] > .window-div {
     width: 400px;
 }
 .window > .window-div {
     height: 100%;
     margin: 0px auto;
     max-width: 400px;
-}
+}*/
 
 
 .tab-icon-border, .tab-list-border {
@@ -371,23 +389,33 @@ input[special], .search-past-item.special {
 
 
 .tab-list-border {
-    position: absolute;
-    width: 400px;
-    height: 100%;
-    padding-bottom: 20px;
-    margin-top: -10px;
+    /*-webkit-box-sizing: border-box;*/
+    -webkit-box-flex: 1;
 
-    /*z-index: -1;*/
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+
+    position: relative;
+
+    width: 400px;
+    margin-top: -10px;
 
     border-radius: 4px;
     border-top-left-radius: 0px;
+
+    /*height: 100%;*/
+    /*padding-bottom: 20px;*/
+
+    /*z-index: -1;*/
 }
 .tab-list {
-    height: 100%;
+    -webkit-box-flex: 1;
+
+    /*height: 100%;*/
     padding: 2px;
 
-    outline-width: 0px;
     background-color: white;
+    outline: none;
 
     overflow-x: hidden;
     overflow-y: auto;
@@ -395,6 +423,9 @@ input[special], .search-past-item.special {
 
 .tab-icon-border {
     -webkit-box-sizing: border-box;
+
+    /*position: relative;
+    z-index: 1;*/
 
     width: 105px;
     margin-bottom: 10px;
@@ -406,12 +437,15 @@ input[special], .search-past-item.special {
 }
 .tab-icon-container {
     position: relative;
+    z-index: 1;
     height: 22px;
 
     background-color: inherit;
-    z-index: 1;
 }
 .tab-icon {
+    display: -webkit-box;
+    -webkit-box-align: start;
+
     padding: 0px;
     padding-left: 3px;
     background-color: white;
@@ -422,12 +456,15 @@ input[special], .search-past-item.special {
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 0px;
 }
-.tab-icon-table {
+/*.tab-icon-table {
     width: 100%;
     vertical-align: top;
-}
+}*/
 .tab-icon-text {
-    width: 100%;
+    -webkit-box-flex: 1;
+
+    display: block;
+    /*width: 100%;*/
     padding: 0px;
     /*padding-bottom: 2px;*/
     /*margin: 0px;*/
