--- a/window.css
+++ b/window.css
@@ -27,11 +27,11 @@ table {
     border-spacing: 0px;
 }
 
-.stretch {
+/*.stretch {
     position: relative;
     width: 100%;
     height: 100%;
-}
+}*/
 
 /*.link:active {
     outline: none;
@@ -565,14 +565,20 @@ input[special], .search-past-item.special {
     background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#99c5fb), to(#5fa0f0));
     border-color: #375C89;
 }*/
-
 .tab-icon-dropdown:hover {
     /*! -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 10px;*/
     border: 1px solid gainsboro;
 }
+
 /*.tab-icon-dropdown:active, */.tab-button-close:active {
     -webkit-box-shadow: none;
     border: 1px inset lightgray;
+    /*width: 14px;*/
+
+    /*margin-right: -1px;*/
+    /*margin-top: 1px;*/
+    /*padding-top: 2px;*/
+    background-position: center 2px;
 }
 .tab-button-close {
     width: 16px;
@@ -582,6 +588,7 @@ input[special], .search-past-item.special {
     background-color: rgba(255, 255, 255, 0.75);
     /*background-position: center;*/
 
+    border: 1px solid transparent;
     border-radius: 3px;
 
     /*text-align: center;
@@ -591,7 +598,7 @@ input[special], .search-past-item.special {
     display: none;
 }
 .tab:hover > .tab-button-close[data-display-hover] {
-    display: table-cell;
+    display: block;
 }
 .tab-button-close:hover {
     /*background-image: url('close-button-hover.png');*/
@@ -599,20 +606,21 @@ input[special], .search-past-item.special {
 }
 
 .tab {
+    display: -webkit-box;
     /*! display: table;*/
-    width: 100%;
+    /*width: 100%;*/
     padding: 2px 3px;
     padding-right: 2px;
 
     border: 1px solid transparent;
     border-radius: 3px;
 
-    color: black;
-    text-decoration: none;
+    /*color: black;*/
+    /*text-decoration: none;*/
 
-    table-layout: fixed;
+    /*table-layout: fixed;*/
     cursor: pointer;
-    white-space: nowrap;
+    outline: none;
 }
 
 .tab-favorite {
@@ -620,24 +628,27 @@ input[special], .search-past-item.special {
     background-image: url(images/unfavorite.png);
 }
 .tab[data-favorited] > .tab-favorite {
-    display: table-cell;
+    display: block;
     background-image: url(images/favorite.png);
 }
 
 .tab-favicon, .tab-favorite {
     width: 16px;
     height: 16px;
-    padding: 0px;
+    /*padding: 0px;*/
 }
-.tab-favicon > img,
-.tab-favorite > img {
+.tab-favicon/*,
+.tab-favorite > img*/ {
     vertical-align: top;
 }
 .tab-text {
-    width: 100%;
-    padding: 0px;
+    -webkit-box-flex: 1;
+    /*width: 100%;*/
+    /*padding: 0px;*/
     padding-left: 6px;
     padding-right: 2px;
+
+    white-space: nowrap;
 
     overflow: hidden;
     text-overflow: ellipsis;
@@ -656,7 +667,7 @@ input[special], .search-past-item.special {
     display: none;
 }
 .tab:hover > .tab-favorite {
-    display: table-cell;
+    display: block;
     /*background-image: url(images/unfavorite.png);*/
 }
 /*.tab[data-favorited]:hover > .tab-favorite {
@@ -701,7 +712,7 @@ input[special], .search-past-item.special {
         to(rgba(0, 0, 0, 0.04)));
 
     /*! background-color: rgba(124, 252, 0, 0.35);*/
-    background-color: rgba(114, 255, 0, 0.3); /* -> d4ffb3 */
+    background-color: rgba(114, 255, 0, 0.3); /*! -> d4ffb3 */
     border: 1px solid darkgreen !important;
     border-radius: 0px;
 }
@@ -712,7 +723,7 @@ input[special], .search-past-item.special {
     border-top: 1px solid transparent !important;
 }
 
-.url-input {
+/*!.url-input {
     width: 100%;
     padding: 0px;
     margin: 0px;
@@ -721,4 +732,4 @@ input[special], .search-past-item.special {
     border: none;
     outline: 1px inset rgba(0, 0, 0, 0.1);
     outline-offset: -1px;
-}
+}*/
