--- a/window.css
+++ b/window.css
@@ -435,8 +435,8 @@ input[special], .search-past-item.special {
 .tab-icon-border {
     -webkit-box-sizing: border-box;
 
-    /*position: relative;
-    z-index: 1;*/
+    position: relative;
+    /*z-index: 1;*/
 
     width: 105px;
     margin-bottom: 9px;
@@ -571,7 +571,7 @@ input[special], .search-past-item.special {
 }
 
 /*.tab-icon-dropdown:active, */.tab-button-close:active {
-    -webkit-box-shadow: none;
+    /*-webkit-box-shadow: none;*/
     border: 1px inset lightgray;
     /*width: 14px;*/
 
