--- a/window.css
+++ b/window.css
@@ -23,9 +23,9 @@ body {
     outline: 5px auto -webkit-focus-ring-color;
 }
 
-table {
+/*table {
     border-spacing: 0px;
-}
+}*/
 
 /*.stretch {
     position: relative;
