Update issue 66 Status: Pending

--- a/lib/UI Helper.css
+++ b/lib/UI Helper.css
@@ -96,31 +96,32 @@
     background-position: 95% center;*/
 }
 
-.UI-contextMenu-submenu, .UI-contextMenu-submenu-padding, .UI-contextMenu-submenu-mask {
+/*.UI-contextMenu-submenu, .UI-contextMenu-submenu-padding, .UI-contextMenu-submenu-mask {
     outline: 1px solid red;
-}
+}*/
 
 .UI-contextMenu-submenu-padding {
     -webkit-box-sizing: border-box;
 
     position: absolute;
+    z-index: 2;
     left: 100%;
     top: -4px;
 
-    padding: 7px;
-    margin-left: -8px;
-    margin-top: -7px;
+    padding: 8px;
+    margin-left: -9px;
+    margin-top: -8px;
 }
 .UI-contextMenu-submenu-padding[data-overflow-x] {
     left: auto;
     right: 100%;
-    margin-right: -8px;
+    margin-right: -9px;
     /*padding-right: 7px;*/
 }
 .UI-contextMenu-submenu-padding[data-overflow-y] {
     top: auto;
     bottom: 0px;
-    margin-bottom: -11px;
+    margin-bottom: -12px;
 }
 
 /*.UI-contextMenu-submenu-list {
@@ -129,19 +130,24 @@
 }*/
 
 .UI-contextMenu-submenu-mask {
-    -webkit-transform-origin: 0% 100%;
-    -webkit-transform: rotate(4.5deg);
+    /*-webkit-transform-origin: 0% 100%;
+    -webkit-transform: rotate(4.5deg);*/
     /*-webkit-mask-box-image: url(/images/context-menu-mask.png);*/
 
     position: absolute;
+    z-index: 1;
     left: 0px;
     top: 0px;
     /*border-bottom-left-radius: 100%;*/
 
     width: 100%;
     height: 100%;
+
+    padding: 12px;
+    margin-top: -12px;
+    margin-left: -12px;
 }
-.UI-contextMenu-submenu-mask[data-overflow-x] {
+/*.UI-contextMenu-submenu-mask[data-overflow-x] {
     -webkit-transform-origin: 100% 100%;
     -webkit-transform: rotate(-4.4deg);
 }
@@ -152,7 +158,7 @@
 .UI-contextMenu-submenu-mask[data-overflow-x][data-overflow-y] {
     -webkit-transform-origin: 100% 0%;
     -webkit-transform: rotate(6deg);
-}
+}*/
 /*.UI-contextMenu-submenu-mask.num2 {
     -webkit-transform: rotate(-20deg);
 
