--- a/window.css
+++ b/window.css
@@ -18,6 +18,8 @@ body {
 
     cursor: default;
     outline: none !important;
+
+    overflow-y: hidden;
 }
 [data-selected] {
     outline: 5px auto -webkit-focus-ring-color;
