Fixing a scroll problem when activating the "Move all selected..." submenu.

--- a/window.css
+++ b/window.css
@@ -19,7 +19,7 @@ body {
     cursor: default;
     outline: none !important;
 
-    /*overflow-y: hidden;*/
+    overflow-y: hidden;
 }
 [data-selected] {
     outline: 5px auto -webkit-focus-ring-color;
