--- a/window.css
+++ b/window.css
@@ -319,6 +319,8 @@ input[special], .search-past-item.special {
     /*-webkit-box-align: start;*/
 
     position: absolute;
+    /*left: 0px;
+    top: 0px;*/
 
     width: 100%;
     height: 100%;
