--- a/window.css
+++ b/window.css
@@ -1,14 +1,27 @@
 @charset "UTF-8";
+/*html {
+    margin-top: -15px;
+}*/
 body {
     -webkit-user-drag: none;
     -webkit-user-select: none;
 
+    /*display: table;*/
     /*display: -webkit-box;*/
+    /*-webkit-box-orient: vertical;*/
+
+    /*position: relative;*/
+
+    max-width: 100%;
+    /*max-height: 100%;*/
+
+    /*overflow: scroll;*/
 
     /*width: 900px;
     height: 380px;*/
-    margin: 0px;
     padding: 0px;
+    margin: 0px;
+    /*margin-top: 15px;*/
 
     font: menu;
     font-size: 13px;
@@ -19,6 +32,7 @@ body {
     cursor: default;
     outline: none !important;
 
+    /*overflow: auto;*/
     overflow-y: hidden;
 }
 [data-selected] {
@@ -326,6 +340,8 @@ input[special], .search-past-item.special {
     height: 100%;
     padding: 70px 0px 30px 18px;
     /*margin-right: 15px;*/
+
+    /*outline: 1px solid red;*/
 }
 .window {
     /*width: 400px;*/
@@ -408,6 +424,7 @@ input[special], .search-past-item.special {
     -webkit-box-orient: vertical;
 
     position: relative;
+    /*top: -10px;*/
 
     width: 400px;
     margin-top: -10px;
