--- a/window.css
+++ b/window.css
@@ -117,7 +117,7 @@ body {
     top: 0px;
 
     width: 100%;
-    padding: 15px 27px 22px 25px;
+    padding: 15px 27px 22px 65px; /** 15px 27px 22px 25px */
     /*margin-top: 1px;*/
 
     /*white-space: nowrap;*/
@@ -324,6 +324,63 @@ input[special], .search-past-item.special {
     content: url("/images/button-close.png");
 }*/
 
+/*#views-wrapper {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+
+
+
+    *//*background-image: -webkit-gradient(linear, 50% 0%, 100% 0%, from(grey), to(white));*//*
+
+    background-color: inherit;
+    *//*-webkit-box-shadow: inherit 0px 0px 50px;*//*
+}*/
+
+#views-list {
+    /*-webkit-box-sizing: border-box;*/
+
+    /*-webkit-box-flex: 1;*/
+    -webkit-box-align: start;
+
+    position: fixed;
+    z-index: 3;
+    width: 40px;
+    height: 100%;
+
+    display: block;
+    padding: 5px;
+    padding-top: 25px;
+    padding-right: 0px;
+    margin: 0px;
+    /*margin-top: 70px;*/
+
+    background-color: white;
+    border: none;
+    border-right: 1px solid dimgray;
+    /*border: 1px solid red;*/
+}
+.views-item {
+    display: -webkit-box;
+    -webkit-box-pack: center;
+    -webkit-box-align: center;
+
+    height: 40px;
+    margin-bottom: 5px;
+
+    border: 1px solid transparent;
+    border-right: none;
+    border-radius: 10px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    cursor: pointer;
+}
+.views-item[data-selected] {
+    border-color: red;
+    outline: none;
+    cursor: auto;
+}
+
+
 #window-list {
     -webkit-box-sizing: border-box;
     /*-webkit-box-flex: 1;*/
@@ -338,7 +395,7 @@ input[special], .search-past-item.special {
 
     width: 100%;
     height: 100%;
-    padding: 70px 0px 30px 18px;
+    padding: 70px 0px 30px 58px; /** 70px 0px 30px 18px */
     /*margin-right: 15px;*/
 
     /*outline: 1px solid red;*/
@@ -366,7 +423,7 @@ input[special], .search-past-item.special {
     z-index: 2;
 }
 .window[data-last] {
-    padding-right: 17px;
+    padding-right: 18px;
     min-width: 400px;
 }
 /*.window[data-last] > .window-div {
