Mockup of issue 97. Enable it in the experimental category.

--- a/views/horizontal.css
+++ b/views/horizontal.css
@@ -3,7 +3,7 @@ body {
     overflow-y: hidden;
 }
 
-#window-list {
+.window-list {
     display: -webkit-box;
     -webkit-box-pack: center;
     /*-webkit-box-align: start;*/
