--- a/lib/UI Helper.css
+++ b/lib/UI Helper.css
@@ -204,3 +204,35 @@ button.UI-link {
     visibility: visible;
     opacity: 1;
 }
+
+
+.UI-scrollBar {
+    position: absolute;
+    top: 0px;
+    z-index: 9001;
+
+    width: 20px;
+    /*height: 426px;*/
+    height: 100%;
+
+    /*background-color: green;*/
+}
+.UI-scrollBar-marker {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 2px;
+    margin-top: -1px;
+    background-color: black;
+}
+.UI-scrollBar-track {
+    position: absolute;
+    /*top: 50%;*/
+
+    width: 100%;
+    height: 100px;
+    /*margin-top: -25px;*/
+
+    background-color: red;
+    opacity: 0.5;
+}
