Increasing the padding on the context menu's submenus. Also fixing drag-to-select for input boxes on the options page.

--- a/lib/Options.css
+++ b/lib/Options.css
@@ -147,6 +147,8 @@ input[type="checkbox"][data-options-changed] + span {
     -webkit-box-pack: center;
     -webkit-box-align: center;*/
 
+    /*-webkit-user-select: none;*/
+
     position: absolute;
     top: 0px;
     left: 0px;
