--- a/lib/UI Helper.css
+++ b/lib/UI Helper.css
@@ -129,14 +129,17 @@ button.UI-link {
     left: 100%;
     top: 0px;
 
-    padding: 8px;
-    margin-left: -9px;
-    margin-top: -12px;
+    padding: 12px;
+    padding-right: 20px;
+    margin-left: -13px;
+    margin-top: -16px;
 }
 .UI-contextMenu-submenu-padding[data-overflow-x] {
     left: auto;
     right: 100%;
-    margin-right: -9px;
+    /*padding-left: 20px;
+    padding-right: 12px;*/
+    margin-right: -21px;
     /*padding-right: 7px;*/
 }
 /*.UI-contextMenu-submenu-padding[data-overflow-y] {
