This adds in a lot of the changes needed to make filters (issue 106) work. Some refinements still need to be done, and the Filters category needs to be added into the options page.

--- a/window.css
+++ b/window.css
@@ -137,10 +137,26 @@ body {
 
     white-space: normal;
 }*/
-#button-new-window {
+#button-menu {
+    /*display: -webkit-box;
+    -webkit-box-align: center;*/
+
     /*display: table-cell;*/
+    padding-left: 11px;
+    padding-right: 8px;
+
     margin: 0px;
     margin-right: 12px;
+}
+#button-menu-arrow {
+    /*margin: auto;*/
+    margin-left: 6px;
+    margin-bottom: 2px;
+}
+#button-menu > .UI-contextMenu {
+    margin-top: -3px;
+    margin-left: -14px;
+    text-shadow: none;
 }
 
 /*#Undo-wrapper {
