--- a/lib/UI Helper.css
+++ b/lib/UI Helper.css
@@ -51,6 +51,8 @@ button.UI-link {
     text-align: right;
     letter-spacing: 1px;*/
 
+    text-shadow: none;
+
     text-align: left;
     white-space: nowrap;
 }
