Created a new parsing engine. This should fix a ton of odd bugs and inconsistencies with the search syntax, while still being just as fast (and in some cases, faster!)

--- a/lib/Options.css
+++ b/lib/Options.css
@@ -90,8 +90,10 @@ select[data-options-changed] {
     border-radius: 4px;
 }*/
 input[type="checkbox"] {
-    top: 1px;
     margin-top: 2px !important;
+}
+input[type="checkbox"], input[type="radio"] {
+    top: 1px;
     margin-right: 5px !important;
     /*margin-bottom: 5px !important;*/
 }
