--- a/window.css
+++ b/window.css
@@ -147,6 +147,8 @@ body {
 
     margin: 0px;
     margin-right: 12px;
+
+    /*vertical-align: -1px;*/
 }
 #button-menu-arrow {
     /*margin: auto;*/
@@ -217,7 +219,7 @@ body {
     position: relative;
 
     width: 241px; /*! 200px 225px */
-    margin-top: 2px;
+    margin-top: 4px;
     /*padding-left: 10px;*/
 
     /*text-shadow: white 0px 1px 0px;*/
